migrated to java 8 changed way to get producers and consumers