@@ -2,12 +2,13 @@ package fr.ncasaux.camelplantuml.extractor.processor;
 
 import fr.ncasaux.camelplantuml.model.ProducerInfo;
 import fr.ncasaux.camelplantuml.utils.ListUtils;
+import org.apache.commons.collections4.CollectionUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import javax.management.*;
+import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
-import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Set;
@@ -18,15 +19,16 @@ public class SendDynamicProcessorInfoExtractor {
 
     public static void getProcessorsInfo(MBeanServer mbeanServer,
                                          ArrayList<ProducerInfo> producersInfo)
-            throws MalformedObjectNameException, AttributeNotFoundException, MBeanException, ReflectionException, InstanceNotFoundException {
+            throws MalformedObjectNameException, AttributeNotFoundException, MBeanException, ReflectionException, InstanceNotFoundException, UnsupportedEncodingException {
 
         QueryExp exp = Query.eq(Query.classattr(), Query.value("org.apache.camel.management.mbean.ManagedSendDynamicProcessor"));
         Set<ObjectName> processorsSet = mbeanServer.queryNames(new ObjectName("org.apache.camel:type=processors,*"), exp);
-        List<ObjectName> processorsList = List.copyOf(processorsSet);
+        List<ObjectName> processorsList = new ArrayList<>();
+        CollectionUtils.addAll(processorsList, processorsSet);
 
         for (ObjectName on : processorsList) {
             ProducerInfo producerInfo = new ProducerInfo((String) mbeanServer.getAttribute(on, "RouteId"),
-                    URLDecoder.decode((String) mbeanServer.getAttribute(on, "Uri"), StandardCharsets.UTF_8), "toD", true);
+                    URLDecoder.decode((String) mbeanServer.getAttribute(on, "Uri"), "UTF-8"), "toD", true);
             ListUtils.addProducerInfo(producersInfo, producerInfo, LOGGER);
         }
     }
